# portal-dna

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  VERSIONS.md  dna.yaml  flake.nix
bundled/portal/: dna.yaml
docs/: Holochain_Version_Map.md
hc_utils/: Cargo.toml
portal_types/: Cargo.toml
scoped_types/: Cargo.toml
scoped_types/src/: lib.rs
sdk/: Cargo.toml  README.md
sdk/src/: lib.rs
tests/: Makefile  package-lock.json  package.json
tests/dnas/content/: dna.yaml
tests/integration/: test_no_portal.js  test_portal.js
tests/zomes/: Cargo.toml
tests/zomes/content/: Cargo.toml
tests/zomes/content/src/: lib.rs
tests/zomes/content_csr/: Cargo.toml
tests/zomes/content_csr/src/: lib.rs
types/: Cargo.toml  README.md
types/src/: host_entry.rs  lib.rs
zomelets/: README.md  package-lock.json  package.json  webpack.config.js
zomelets/src/: index.js  types.js
zomes/: Cargo.toml
zomes/portal/: Cargo.toml
zomes/portal/src/: lib.rs  validation.rs
zomes/portal_api/: Cargo.toml
zomes/portal_api/src/: host.rs  lib.rs
zomes/portal_csr/: Cargo.toml
zomes/portal_csr/src/: constants.rs  host.rs  lib.rs
