[package]
name = "hc_portal_types"
version = "0.4.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/portal-dna"
description = "Holochain entry types used by the Portal DNA Zomes"
readme = "README.md"

[lib]
name = "portal_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = { git = "https://github.com/mjbrisebois/rust-hc-crud-caps.git", rev = "10d042c36024e2d839008bdb621595a8c09f0b74" }
hdi = "0.2.3-beta-rc.0"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
