[package]
name = "hc_portal_types"
version = "0.7.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/portal-dna"
description = "Holochain entry types used by the Portal DNA Zomes"
readme = "README.md"

[lib]
name = "portal_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = "0.8.0"
hdi = "0.3.1-beta-rc.0"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
thiserror = "1"
