[package]
name = "hc_portal_sdk"
version = "0.8.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/portal-dna"
description = "SDK for the Portal DNA Zomes"
readme = "README.md"

[lib]
name = "portal_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
whi_hdk_extensions = "0.4"
