[package]
name = "hc_portal_sdk"
version = "0.1.2"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/portal-dna"
description = "SDK for the Portal DNA Zomes"
readme = "README.md"

[lib]
name = "portal_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = "0.10.2"
hc_portal_types = "0.9.0"
# hc_portal_types = { path = "../types" }
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
whi_hdk_extensions = "0.4"
