[package]
name = "hc_portal_sdk"
version = "0.4.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/portal-dna"
description = "SDK for the Portal DNA Zomes"
readme = "README.md"

[lib]
name = "portal_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = "0.13"
hc_portal_types = { version = "0.12", path = "../types" }
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"
whi_hdk_extensions = "0.7"
