[package]
name = "hc_portal_types"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
whi_hdi_extensions = "0.4"
