[package]
name = "hc_portal_types"
version = "0.15.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/holochain/portal-dna"
description = "Definitions used by the Portal DNA Zomes"
readme = "README.md"

[lib]
name = "portal_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"
whi_hdi_extensions = "0.12"
