[package]
name = "portal"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
hc_crud_caps = { git = "https://github.com/mjbrisebois/rust-hc-crud-caps.git", rev = "ccee03e7493cd45d73b2211f4f465cabde28e357" }
hc_utils = {path = "../../hc_utils"}
hdi = "0.2.4"
hdk = "0.1.4"
hc_portal_types = {path = "../../portal_types"}
serde = "1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
thiserror = "1"
