[package]
name = "portal"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
hc_crud_caps = { git = "https://github.com/mjbrisebois/rust-hc-crud-caps.git", rev = "68fc3a029fa910fed74f625678ff92496ebf6742" }
hc_utils = {path = "../../hc_utils"}
hdi = "0.2.5"
hdk = "0.1.5"
hc_portal_types = {path = "../../portal_types"}
serde = "1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
thiserror = "1"
