[package]
name = "portal_api"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = { git = "https://github.com/mjbrisebois/rust-hc-crud-caps.git", rev = "10d042c36024e2d839008bdb621595a8c09f0b74" }
hc_utils = {path = "../../hc_utils"}
hdk = "0.1.3-beta-rc.1"
hex = "0"
portal = {path = "../portal"}
rand = "0.8.5"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
thiserror = "1"
