[package]
name = "portal_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"

[lib]
name = "portal_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_portal_sdk = { version = "0.9", path = "../../sdk" }
portal = { path = "../portal" }
rand = "0.8.5"
serde = "1"
